PP-12365 add test for revoke tokens by account